# rclada_common

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: ada_exports.cmake  ada_imports.cmake  ada_project.cmake  ada_scope.cmake  ada_utils.cmake  rclada_common-config.cmake.in  rclada_commonConfig.cmake.in
gpr_ament/: ament.gpr
gpr_ament/src/: ament-index.adb  ament-index.ads  ament.ads  ament_query.cpp
gpr_c_builtins/: c_builtins.gpr
resources/: AdaConfig.cmake.in  DefaultConfig.cmake.in  ada_env_install.dsv.in  external_c_headers.gpr.in  external_c_lib.gpr.in  msg_import.gpr.in
