<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclada_common</name>
  <version>0.1.0</version>
  <description>Resources and CMake functions for Ada projects</description>
  <maintainer email="amosteo@unizar.es">Alejandro R Mosteo</maintainer>
  <license>LGPLv3</license>

  <depend>ament_index_cpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>gprbuild</buildtool_depend>
  <buildtool_depend>gnat</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
